--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "swagger-demo"
+name = "learning-tower-web"
 version = "0.1.0"
 authors = ["Mark Gulbrandsen <mark.gulbrandsen@gmail.com>"]
 edition = "2018"
