this is a bit confused, since I changed the ports, so be careful to get them configured back to 8080 if you want to do docker testing again. however, this now works with cors requests and I have a react app calling this.

--- a/learning-tower-web-deployment.yaml
+++ b/learning-tower-web-deployment.yaml
@@ -14,6 +14,6 @@ spec:
         spec:
             containers:
             - name: learning-tower-web
-              image: persistence.local:5000/gulbrand/learning-tower-web:0.2.0
+              image: gulbrand/learning-tower-web
               ports:
               - containerPort: 8000
